# oarepo-file-pipeline

./: README.md  docker-compose-tests.yml  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: build.yaml
oarepo_file_pipeline/: __init__.py  config.py  ext.py  pipeline_registry.py  proxies.py  views.py
oarepo_file_pipeline/model/presets/pipeline/: __init__.py
oarepo_file_pipeline/model/presets/pipeline/resources/: config.py  resource.py
oarepo_file_pipeline/model/presets/pipeline/services/: __init__.py  components.py  permissions.py  service.py
oarepo_file_pipeline/pipeline_generators/: __init__.py  crypt4gh.py  image.py  zip.py
oarepo_file_pipeline/resources/: __init__.py  config.py  resource.py
oarepo_file_pipeline/services/: __init__.py  permissions.py  pipeline_transfer.py  service.py
tests/: conftest.py  models.py  records2.yaml  test_file_pipeline.py  test_pipeline_generators.py
