[project]
name = "oarepo-file-pipeline"
dynamic = ["version"]
description = "File pipeline"
readme = "README.md"
authors = [
    { name = "Arsenii Pogodin", email = "xsenyaaax@gmail.com" },
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "joserfc",
]

[project.optional-dependencies]
tests = [
    "pytest~=7.1.3",
    "pytest-invenio",
    "pytest-flask",
]

[project.entry-points."invenio_base.apps"]
oarepo_file_pipeline = "oarepo_file_pipeline.ext:OARepoFilePipeline"

[project.entry-points."invenio_base.api_apps"]
oarepo_file_pipeline = "oarepo_file_pipeline.ext:OARepoFilePipeline"

[project.entry-points."oarepo.file.pipelines"]
zip_pipelines = "oarepo_file_pipeline.pipeline_generators.zip:ZipGenerator"
image_pipelines = "oarepo_file_pipeline.pipeline_generators.image:ImageGenerator"
c4gh_pipeline = "oarepo_file_pipeline.pipeline_generators.crypt4gh:Crypt4GHGenerator"

[project.entry-points."invenio_base.blueprints"]
oarepo_file_pipeline = "oarepo_file_pipeline.views:create_pipeline_file_blueprint"

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-file-pipeline"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "oarepo_file_pipeline/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
