[metadata]
name = oarepo_file_pipeline
version = 0.1.0
description = File pipeline
author =
python_requires = >=3.12,<3.13

[options]
install_requires =
    flask
    joserfc
include_package_data = false
packages = find:

[options.packages.find]
include =
    oarepo_file_pipeline*
exclude =
    tests*

[options.extras_require]
tests =
    pytest~=7.1.3
    pytest-invenio
    pytest-flask

[options.entry_points]
invenio_base.apps =
    oarepo_file_pipeline = oarepo_file_pipeline.ext:OARepoFilePipeline
invenio_base.api_apps =
    oarepo_file_pipeline = oarepo_file_pipeline.ext:OARepoFilePipeline
oarepo.file.pipelines =
    zip_pipelines = oarepo_file_pipeline.pipeline_generators.zip:ZipGenerator
    image_pipelines = oarepo_file_pipeline.pipeline_generators.image:ImageGenerator
    c4gh_pipeline = oarepo_file_pipeline.pipeline_generators.crypt4gh:Crypt4GHGenerator
